@@ -18,6 +18,8 @@
 
 import asyncore
 import errno
+import fcntl
+import os
 
 from gsh.console import console_output
 
@@ -33,6 +35,7 @@ class buffered_dispatcher(asyncore.file_dispatcher):
         self.fd = fd
         self.read_buffer = ''
         self.write_buffer = ''
+        self.allow_write = True
 
     def handle_read(self):
         """Some data can be read"""
@@ -69,9 +72,25 @@ class buffered_dispatcher(asyncore.file_dispatcher):
 
     def dispatch_write(self, buf):
         """Augment the buffer with stuff to write when possible"""
+        assert self.allow_write
         self.write_buffer += buf
         if len(self.write_buffer) > buffered_dispatcher.MAX_BUFFER_SIZE:
             console_output('Buffer too big (%d) for %s\n' %
                                             (len(self.write_buffer), str(self)))
             raise asyncore.ExitNow(1)
 
+    def drain_and_block_writing(self):
+        # set the fd to blocking mode
+        self.allow_write = False
+        flags = fcntl.fcntl(self.fd, fcntl.F_GETFL, 0)
+        flags = flags & ~os.O_NONBLOCK
+        fcntl.fcntl(self.fd, fcntl.F_SETFL, flags)
+        if self.writable():
+            self.handle_write()
+
+    def allow_writing(self):
+        # set the fd to non-blocking mode
+        flags = fcntl.fcntl(self.fd, fcntl.F_GETFL, 0)
+        flags = flags | os.O_NONBLOCK
+        fcntl.fcntl(self.fd, fcntl.F_SETFL, flags)
+        self.allow_write = True
